borsh-derive/src/internals/serialize/enums/snapshots/borsh_discriminant_false-2.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerializeAsync for X {
    async fn serialize<'async_variant, __W: borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            X::A => 0u8,
            X::B => 1u8,
            X::C => 2u8,
            X::D => 3u8,
            X::E => 4u8,
            X::F => 5u8,
        };
        writer.write_u8(variant_idx).await?;
        ::core::result::Result::Ok(())
    }
}
