borsh-derive/src/internals/serialize/enums/snapshots/borsh_discriminant_false.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl borsh::ser::BorshSerialize for X {
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            X::A => 0u8,
            X::B => 1u8,
            X::C => 2u8,
            X::D => 3u8,
            X::E => 4u8,
            X::F => 5u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        Ok(())
    }
}
