borsh-derive/src/internals/serialize/enums/snapshots/check_serialize_with_async_attr.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K: Ord, V> borsh::ser::BorshSerialize for C<K, V>
where
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            C::C3(..) => 0u8,
            C::C4 { .. } => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            C::C3(id0, id1) => {
                <u64 as borsh::BorshSerialize>::serialize(id0, writer)?;
                <u64 as borsh::BorshSerialize>::serialize(id1, writer)?;
            }
            C::C4 { x, y, .. } => {
                <u64 as borsh::BorshSerialize>::serialize(x, writer)?;
                <ThirdParty<K, V> as borsh::BorshSerialize>::serialize(y, writer)?;
            }
        }
        ::core::result::Result::Ok(())
    }
}
